--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -745,9 +745,7 @@ const SelectRole = (props: SelectRoleProps) => {
   async function renderMemberships(organization, isAdmin) {
     const list = document.getElementById("memberships_list");
     try {
-      const { data } = await organization.getMemberships();
-      
-      const memberships = data;
+      const { data: memberships } = await organization.getMemberships();
 
       memberships.map((membership) => {
         const li = document.createElement("li");
