--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -813,9 +813,7 @@ const SelectRole = (props: SelectRoleProps) => {
   async function init() {
     // This is the current organization ID.
     const organizationId = "org_XXXXXXX";
-    const { data } = await window.Clerk.user.getOrganizationMemberships();
-
-    const organizationMemberships = data;
+    const { data: organizationMemberships } = await window.Clerk.user.getOrganizationMemberships();
 
     const currentMembership = organizationMemberships.find(membership 
       => membership.organization.id === organizationId);
