--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -855,4 +855,4 @@ const SelectRole = (props: SelectRoleProps) => {
 
 {/* TODO: Should we mention the update method on the OrganizationMembership object? Or the updateMember method on the Organization object? Or the updateOrganizationMembership method from the Backend API? */}
 
-{/* TODO: ## Remove members , plus examples? */}
+{/* TODO: Add section for ## Remove members , and add appropriate examples ? */}
