rename data when destructuring getInvitations

--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -784,9 +784,7 @@ const SelectRole = (props: SelectRoleProps) => {
   async function renderInvitations(organization, isAdmin) {
     const list = document.getElementById("invitations_list");
     try {
-      const { data } = await organization.getInvitations();
-
-      const invitations = data;
+      const { data: invitations } = await organization.getInvitations();
 
       invitations.map((invitation) => {
         const li = document.createElement("li");
