--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -38,7 +38,7 @@ Clerk SDKs expose an instance of the Clerk Backend SDK for use in server environ
   The Backend SDK is accessible via the `clerkClient` object if you are using Node.
 
   ```js
-  import clerkClient from '@clerk/clerk-sdk-node';
+  import { clerkClient } from '@clerk/clerk-sdk-node';
   ```
   </Tab>
 </Tabs>
