update redirectToSignIn and authMiddleware imports from @clerk/nextjs to @clerk/nextjs/server

--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -244,7 +244,7 @@ Clerk's `authMiddleware` helper can be used in both App Router and Pages Router 
 To limit access to the entire application, your middleware can be configured as follows:
 
 ```tsx filename="middleware.ts"
-  import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
+  import { authMiddleware, redirectToSignIn } from '@clerk/nextjs/server';
 
   export default authMiddleware({
     afterAuth(auth, req, evt) {
@@ -267,7 +267,7 @@ To limit access to the entire application, your middleware can be configured as 
 To limit access to a specific part of the application, you can check if the path the user is visiting is the path you want to limit access to. In this example, the `/dashboard` path is limited to users with active organizations only. If the user is not active in an organization, they will be redirected to the `/dashboard/org-selection` page.
 
 ```tsx filename="middleware.ts"
-  import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
+  import { authMiddleware, redirectToSignIn } from '@clerk/nextjs/server';
 
   export default authMiddleware({
     afterAuth(auth, req, evt) {
