--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -70,7 +70,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 Some developers will need to handle specific cases such as handling redirects differently or detecting if a user is inside an organization. These cases can be handled with `afterAuth()`.
 
 ```ts filename="middleware.ts"
-import { authMiddleware, redirectToSignIn } from "@clerk/nextjs";
+import { authMiddleware, redirectToSignIn } from "@clerk/nextjs/server";
 
 export default authMiddleware({
   afterAuth(auth, req, evt) {
