createClerkClient is used to customize clerkClient instance, individual setters are dropped

--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -5,7 +5,7 @@ description: Learn how to integrate Node.js into your Clerk application.
 
 # Clerk Node.js SDK
 
-## Setting up Clerk Node.js
+## Set up Clerk Node.js
 
 <Steps>
 
@@ -13,7 +13,7 @@ description: Learn how to integrate Node.js into your Clerk application.
 
 You need to create a Clerk application in your Clerk Dashboard before you can set up Clerk Node.js. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
-### Install Clerk Node.js
+### Install `@clerk/clerk-sdk-node`
 
 Once a Clerk application has been created, you can install and then start using Clerk Node.js in your application. An ES module for the Clerk Node SDK is available under the [`@clerk/clerk-sdk-node`](https://www.npmjs.com/package/@clerk/clerk-sdk-node) npm package.
 
@@ -33,7 +33,7 @@ pnpm add @clerk/clerk-sdk-node
 
 ### Set environment keys
 
-Below is an example of an `.env.local` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+Below is an example of an `.env.local` file. If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -47,39 +47,16 @@ CLERK_SECRET_KEY={{secret}}
 
 ## Resources
 
-All resource operations are mounted as sub-APIs on the `clerkClient` object. For more information, check out the [Clerk Backend SDK](/docs/references/backend/overview) documentation.
+All resource operations are mounted as sub-APIs on the `clerkClient` object. You can find the full list of available operations in the [Clerk Backend SDK](/docs/references/backend/overview) documentation.
 
-## Customizing resources
-
-The following options are available for you to customize the behaviour of the `clerkClient` object.
-
-<Callout type="info">
-  Most options can also be set as environment variables so that you don't need to pass anything to the constructor or set it via the available setters.
-</Callout>
-
-| Option | Description | Default | Environment variable |
-| --- | --- | --- | --- |
-| `secretKey` | Server key for `api.clerk.com` | none | `CLERK_SECRET_KEY` |
-| `apiVersion` | for future use, `v1` for now | `v1` | `CLERK_API_VERSION` |
-| `serverApiURL` | for debugging / future use | `https://api.clerk.com` | `CLERK_API_URL` |
-| `httpOptions` | http client options | `{}` | N/A |
-
-For every option the resolution is as follows, in order of descending precedence:
-
-- option passed
-- environment variable (if applicable)
-- default
-
-Another available environment variable is `CLERK_LOGGING`. You can set its value to `true` to enable additional logging that may be of use when debugging an issue.
-
-### Singleton
+### Instantiate a default Clerk client instance
 
 If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable and being finished, the default instance created by the SDK will suffice for your needs.
 
 <Tabs items={["ESM", "CJS"]}>
   <Tab>
   ```js
-  import clerkClient from '@clerk/clerk-sdk-node';
+  import { clerkClient } from '@clerk/clerk-sdk-node';
 
   const userList = await clerkClient.users.getUserList();
   ```
@@ -118,37 +95,19 @@ If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable 
   </Tab>
 </Tabs>
 
-#### Setters
+### Instantiate a custom Clerk client instance
 
-The following setters are available for you to change the options even after you've obtained a handle on a `clerkClient` or sub-api instance:
+If you would like to customize the behavior of the SDK, you can instantiate a `clerkClient` instance yourself by calling `createClerkClient` and passing in [options](#customizing-resources).
 
-If you have a `clerkClient` handle:
-
-- `clerkClient.secretKey = value;`
-- `clerkClient.serverApiUrl = value;`
-- `clerkClient.apiVersion = value;`
-- `clerkClient.httpOptions = value;` (deprecated)
-
-If are using a sub-api handle and wish to change options on the (implicit) singleton `clerkClient` instance:
-
-- `setClerkSecretKey(value)`
-- `setClerkServerApiUrl(value)`
-- `setClerkApiVersion(value)`
-- `setClerkHttpOptions(value)`
-
-### Custom instantiation
-
-If you would like to customize the behavior of the SDK, you can instantiate a `clerkClient` instance yourself by passing in [options](#customizing-resources).
-
-The example below shows how to create a `clerkClient` instance and pass a Clerk secret key instead of setting a `CLERK_SECRET_KEY` environment variable.
+The example below shows how to use `createClerkClient` to create a `clerkClient` instance and pass a Clerk secret key *instead of* setting a `CLERK_SECRET_KEY` environment variable.
 
 <InjectKeys>
 
 <CodeBlockTabs options={["ESM", "CJS"]}>
 ```js
-import Clerk from '@clerk/clerk-sdk-node/esm/instance';
+import { createClerkClient } from '@clerk/clerk-sdk-node';
 
-const clerkClient = Clerk({ secretKey: '{{secret}}' });
+const clerkClient = createClerkClient({ secretKey: '{{secret}}' });
 
 const clientList = await clerkClient.clients.getClientList();
 ```
@@ -159,13 +118,40 @@ const Clerk = require('@clerk/clerk-sdk-node/cjs/instance').default;
 const clerkClient = Clerk({ secretKey: '{{secret}}' });
 
 clerkClient.sessions
-    .getSessionList()
-    .then((sessions) => console.log(sessions))
-    .catch((error) => console.error(error));
+  .getSessionList()
+  .then((sessions) => console.log(sessions))
+  .catch((error) => console.error(error));
 ```
 </CodeBlockTabs>
 
 </InjectKeys>
+
+### Customizing resources
+
+The following options are available for you to customize the behaviour of the `clerkClient` object.
+
+<Callout type="info">
+  Most options can also be set as environment variables so that you don't need to pass anything to the constructor or set it via the available setters.
+</Callout>
+
+| Option | Description | Default | Environment variable |
+| --- | --- | --- | --- |
+| `secretKey` | Server key for `api.clerk.com`. Can be found in your Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. | none | `CLERK_SECRET_KEY` |
+| `apiVersion` | API version to use | `v4` | `CLERK_API_VERSION` |
+| `apiUrl` | For debugging | `https://api.clerk.com` | `CLERK_API_URL` |
+| `httpOptions` | HTTP client options | `{}` | N/A |
+
+{/* TODO: I think more of a description and example can be added for httpOptions. Also, we need to add information for audience, proxyUrl, jwtKey, publishableKey, domain, isSallite, telemetry */}
+
+For every option, the resolution is as follows, in order of descending precedence:
+
+- option passed
+- environment variable (if applicable)
+- default
+
+This means that if you pass an option to the constructor, it will always take precedence over an environment variable.
+
+Another available environment variable is `CLERK_LOGGING`. You can set its value to `true` to enable additional logging that may be of use when debugging an issue.
 
 ## Multi-session applications
 
