--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -86,7 +86,7 @@ const user = await clerkClient.users.updateUser(userId, params);
 
   <Tab>
   ```js filename="updateUser.js"
-  import clerkClient from '@clerk/clerk-sdk-node';
+  import { clerkClient } from '@clerk/clerk-sdk-node';
 
   app.post('/api/update-user',
     // ClerkExpressRequireAuth returns an error for unauthorized requests
