--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -45,113 +45,9 @@ CLERK_SECRET_KEY={{secret}}
 
 </Steps>
 
-## Resources
+## Available methods
 
-All resource operations are mounted as sub-APIs on the `clerkClient` object. You can find the full list of available operations in the [Clerk Backend SDK](/docs/references/backend/overview) documentation.
-
-### Instantiate a default Clerk client instance
-
-If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable and being finished, the default instance created by the SDK will suffice for your needs.
-
-<Tabs items={["ESM", "CJS"]}>
-  <Tab>
-  ```js
-  import { clerkClient } from '@clerk/clerk-sdk-node';
-
-  const userList = await clerkClient.users.getUserList();
-  ```
-
-  Or if you are interested only in a certain resource:
-
-  ```js
-  import { sessions } from '@clerk/clerk-sdk-node';
-
-  const sessionList = await sessions.getSessionList();
-  ```
-  </Tab>
-
-  <Tab>
-  ```js
-  const pkg = require('@clerk/clerk-sdk-node');
-  const clerkClient = pkg.default;
-
-  clerkClient.sessions
-    .getSessionList()
-    .then((sessions) => console.log(sessions))
-    .catch((error) => console.error(error));
-  ```
-
-  Or if you prefer a resource sub-api directly:
-
-  ```js
-  const pkg = require('@clerk/clerk-sdk-node');
-  const { clients } = pkg;
-
-  clients
-    .getClient(clientId)
-    .then((client) => console.log(client))
-    .catch((error) => console.error(error));
-  ```
-  </Tab>
-</Tabs>
-
-### Instantiate a custom Clerk client instance
-
-If you would like to customize the behavior of the SDK, you can instantiate a `clerkClient` instance yourself by calling `createClerkClient` and passing in [options](#customizing-resources).
-
-The example below shows how to use `createClerkClient` to create a `clerkClient` instance and pass a Clerk secret key *instead of* setting a `CLERK_SECRET_KEY` environment variable.
-
-<InjectKeys>
-
-<CodeBlockTabs options={["ESM", "CJS"]}>
-```js
-import { createClerkClient } from '@clerk/clerk-sdk-node';
-
-const clerkClient = createClerkClient({ secretKey: '{{secret}}' });
-
-const clientList = await clerkClient.clients.getClientList();
-```
-
-```js
-const Clerk = require('@clerk/clerk-sdk-node/cjs/instance').default;
-
-const clerkClient = Clerk({ secretKey: '{{secret}}' });
-
-clerkClient.sessions
-  .getSessionList()
-  .then((sessions) => console.log(sessions))
-  .catch((error) => console.error(error));
-```
-</CodeBlockTabs>
-
-</InjectKeys>
-
-### Customizing resources
-
-The following options are available for you to customize the behaviour of the `clerkClient` object.
-
-<Callout type="info">
-  Most options can also be set as environment variables so that you don't need to pass anything to the constructor or set it via the available setters.
-</Callout>
-
-| Option | Description | Default | Environment variable |
-| --- | --- | --- | --- |
-| `secretKey` | Server key for `api.clerk.com`. Can be found in your Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. | none | `CLERK_SECRET_KEY` |
-| `apiVersion` | API version to use | `v4` | `CLERK_API_VERSION` |
-| `apiUrl` | For debugging | `https://api.clerk.com` | `CLERK_API_URL` |
-| `httpOptions` | HTTP client options | `{}` | N/A |
-
-{/* TODO: I think more of a description and example can be added for httpOptions. Also, we need to add information for audience, proxyUrl, jwtKey, publishableKey, domain, isSallite, telemetry */}
-
-For every option, the resolution is as follows, in order of descending precedence:
-
-- option passed
-- environment variable (if applicable)
-- default
-
-This means that if you pass an option to the constructor, it will always take precedence over an environment variable.
-
-Another available environment variable is `CLERK_LOGGING`. You can set its value to `true` to enable additional logging that may be of use when debugging an issue.
+All resource operations are mounted as sub-APIs on the `clerkClient` object. To access the resource operations, [you must first instantiate a `clerkClient` instance](/docs/references/nodejs/available-methods).
 
 ## Multi-session applications
 
