--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -1,11 +1,11 @@
 ---
-title: Migrating from NextAuth
-description: Migrating from NextAuth
+title: Migrating from NextAuth.js
+description: Migrating from NextAuth.js
 ---
 
 This guide shows how to migrate a NextAuth.js application to Clerk for authentication.
 
-## **Install** `@clerk/nextjs`
+## Install `@clerk/nextjs`
 
 Clerk's Next.js SDK gives you access to prebuilt [components](https://clerk.com/docs/components/overview), [hooks](https://clerk.com/docs/references/nextjs/overview#client-side-helpers), and [helpers](https://clerk.com/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
