--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -22,8 +22,7 @@ The example below shows how to use the `<SignOutButton>` component.
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
-            <SignOutButton>
+            <SignOutButton />
           </div>
         );
       }
@@ -35,8 +34,7 @@ The example below shows how to use the `<SignOutButton>` component.
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
-            <SignOutButton>
+            <SignOutButton />
           </div>
         );
       }
@@ -51,8 +49,7 @@ The example below shows how to use the `<SignOutButton>` component.
     export default function Example() {
       return (
         <div>
-        <h1> Sign out </h1>
-          <SignOutButton>
+          <SignOutButton />
         </div>
       );
     }
@@ -66,8 +63,7 @@ The example below shows how to use the `<SignOutButton>` component.
     export default function Home() {
       return (
         <div>
-        <h1> Sign out </h1>
-          <SignOutButton>
+          <SignOutButton />
         </div>
       );
     }
@@ -81,8 +77,7 @@ The example below shows how to use the `<SignOutButton>` component.
     export default function Home() {
       return (
         <div>
-        <h1> Sign out </h1>
-          <SignOutButton>
+          <SignOutButton />
         </div>
       );
     }
@@ -103,7 +98,6 @@ You can create a custom button by wrapping your own button, or button text, in t
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
             <SignOutButton>
               <button>Sign out</button>
             </SignOutButton>
@@ -118,7 +112,6 @@ You can create a custom button by wrapping your own button, or button text, in t
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
             <SignOutButton>
               <button>Sign out</button>
             </SignOutButton>
@@ -136,7 +129,6 @@ You can create a custom button by wrapping your own button, or button text, in t
     export default function Example() {
       return (
         <div>
-        <h1> Sign out </h1>
           <SignOutButton>
             <button>Sign out</button>
           </SignOutButton>
@@ -153,7 +145,6 @@ You can create a custom button by wrapping your own button, or button text, in t
     export default function Home() {
       return (
         <div>
-        <h1> Sign in </h1>
           <SignOutButton>
             <button>Sign out</button>
           </SignOutButton>
@@ -170,7 +161,6 @@ You can create a custom button by wrapping your own button, or button text, in t
     export default function Home() {
       return (
         <div>
-        <h1> Sign out </h1>
           <SignOutButton>
             <button>Sign out</button>
           </SignOutButton>
@@ -182,6 +172,10 @@ You can create a custom button by wrapping your own button, or button text, in t
 </Tabs>
 
 ### Multi-session usage
+
+#### Sign out of all sessions
+
+Clicking the `<SignOutButton>` component signs the user out of all sessions. This is the default behavior.
 
 #### Sign out of a specific session
 
@@ -204,14 +198,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
           return (
             <div>
               <h1> Sign in </h1>
-              <SignInButton>
+              <SignInButton />
             </div>
           );
         }
 
         return (
           <div>
-            <h1> Sign out </h1>
             <SignOutButton signOutOptions={{ sessionId }} />
           </div>
         );
@@ -228,14 +221,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
           return (
             <div>
               <h1> Sign in </h1>
-              <SignInButton>
+              <SignInButton />
             </div>
           );
         }
 
         return (
           <div>
-            <h1> Sign out </h1>
             <SignOutButton signOutOptions={{ sessionId }} />
           </div>
         );
@@ -250,19 +242,18 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
 
     export default function Home() {
       const { sessionId } = useAuth();
-     
+
       if (!sessionId) {
         return (
           <div>
             <h1> Sign in </h1>
-            <SignInButton>
+            <SignInButton />
           </div>
         );
       }
 
       return (
         <div>
-          <h1> Sign out </h1>
           <SignOutButton signOutOptions={{ sessionId }} />
         </div>
       );
@@ -281,14 +272,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         return (
           <div>
             <h1> Sign in </h1>
-            <SignInButton>
+            <SignInButton />
           </div>
         );
       }
 
       return (
         <div>
-          <h1> Sign out </h1>
           <SignOutButton signOutOptions={{ sessionId }} />
         </div>
       );
@@ -307,110 +297,14 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         return (
           <div>
             <h1> Sign in </h1>
-            <SignInButton>
+            <SignInButton />
           </div>
         );
       }
 
       return (
         <div>
-          <h1> Sign out </h1>
           <SignOutButton signOutOptions={{ sessionId }} />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
-
-#### Sign out of all sessions
-
-You can sign out of all currently active sessions by passing a callback that returns the [`signOut()`](/docs/custom-flows/multi-session-applications#sign-out-all-sessions) method to the `signOutCallback` prop. This is useful for signing out all currently active accounts from a multi-session (multiple account) application.
-
-In the example below, the `signOut()` method is retrieved from the [`useClerk()`](/docs/references/react/use-clerk) hook.
-
-<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
-  <Tab>
-    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```tsx filename="app/page.tsx"
-      "use client";
-
-      import { SignOutButton, useClerk } from "@clerk/nextjs";
-
-      export default function Home() {
-        const { signOut } = useClerk();
-
-        return (
-          <div>
-            <h1> Sign out </h1>
-            <SignOutButton signOutCallback={() => signOut()} />
-          </div>
-        );
-      }
-      ```
-
-      ```tsx filename="pages/index.tsx"
-      import { SignOutButton, useClerk } from "@clerk/nextjs";
-
-      export default function Home() {
-        const { signOut } = useClerk();
-
-        return (
-          <div>
-            <h1> Sign out </h1>
-            <SignOutButton signOutCallback={() => signOut()} />
-          </div>
-        );
-      }
-      ```
-    </CodeBlockTabs>
-  </Tab>
-
-  <Tab>
-    ```jsx filename="example.js"
-    import { SignOutButton, useClerk } from "@clerk/clerk-react";
-
-    export default function Home() {
-      const { signOut } = useClerk();
-
-      return (
-        <div>
-          <h1> Sign out </h1>
-          <SignOutButton signOutCallback={() => signOut()} />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    ```jsx filename="pages/index.js"
-    import { SignOutButton, useClerk } from "@clerk/remix";
-
-    export default function Home() {
-      const { signOut } = useClerk();
-
-      return (
-        <div>
-          <h1> Sign out </h1>
-          <SignOutButton signOutCallback={() => signOut()} />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    ```jsx filename="pages/index.js"
-    import { SignOutButton, useClerk } from "gatsby-plugin-clerk";
-
-    export default function Home() {
-      const { signOut } = useClerk();
-
-      return (
-        <div>
-          <h1> Sign out </h1>
-          <SignOutButton signOutCallback={() => signOut()} />
         </div>
       );
     }
@@ -422,6 +316,6 @@ In the example below, the `signOut()` method is retrieved from the [`useClerk()`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `signOutCallback?` | <code>{`() => (void \| Promise<any>)`}</code> | A promise to handle after the sign out has successfully happened. |
+| `redirectUrl?` | `string` | Full URL or path to navigate to after successful sign-in or sign-up. |
 | `children?` | `React.ReactNode` | children you want to wrap the `<SignOutButton>` in. |
 | `signOutOptions?` | `SignOutOptions` | Object that has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications. |
