afterSignOutUrl, afterSignInUrl, afterSignUpUrl default to / path

--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -327,7 +327,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
 
       const Header = () => (
         <header>
-          <OrganizationSwitcher afterSignOutUrl='/'>
+          <OrganizationSwitcher>
             <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </OrganizationSwitcher.OrganizationProfilePage>
@@ -348,7 +348,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
 
       const Header = () => (
         <header>
-          <OrganizationSwitcher afterSignOutUrl='/'>
+          <OrganizationSwitcher>
             <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </OrganizationSwitcher.OrganizationProfilePage>
@@ -372,7 +372,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
 
       const Header = () => (
         <header>
-          <OrganizationSwitcher afterSignOutUrl='/'>
+          <OrganizationSwitcher>
             <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </OrganizationSwitcher.OrganizationProfilePage>
@@ -396,7 +396,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
       export default function Header() {
       return (
         <header>
-          <OrganizationSwitcher afterSignOutUrl='/'>
+          <OrganizationSwitcher>
             <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </OrganizationSwitcher.OrganizationProfilePage>
