--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -327,7 +327,7 @@ If you are using the `<UserButton />` component with the default props (where th
 
       const Header = () => (
         <header>
-          <UserButton afterSignOutUrl='/'>
+          <UserButton>
             <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </UserButton.UserProfilePage>
@@ -348,7 +348,7 @@ If you are using the `<UserButton />` component with the default props (where th
 
       const Header = () => (
         <header>
-          <UserButton afterSignOutUrl='/'>
+          <UserButton>
             <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </UserButton.UserProfilePage>
@@ -372,7 +372,7 @@ If you are using the `<UserButton />` component with the default props (where th
 
     const Header = () => (
         <header>
-          <UserButton afterSignOutUrl='/'>
+          <UserButton>
             <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
                 <MyCustomPageContent />
             </UserButton.UserProfilePage>
@@ -396,7 +396,7 @@ If you are using the `<UserButton />` component with the default props (where th
     export default function Header() {
     return (
       <header>
-        <UserButton afterSignOutUrl='/'>
+        <UserButton>
           <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
               <MyCustomPageContent />
           </UserButton.UserProfilePage>
