--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -9,7 +9,7 @@ The `<SignUpButton>` component is a button that links to the sign-up page or dis
 
 ## Usage
 
-#### Basic usage
+### Basic usage
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
@@ -18,8 +18,7 @@ The `<SignUpButton>` component is a button that links to the sign-up page or dis
   export default function Home() {
     return (
       <div>
-      <h1> Sign up </h1>
-        <SignUpButton>
+        <SignUpButton />
       </div>
     );
   }
@@ -31,8 +30,7 @@ The `<SignUpButton>` component is a button that links to the sign-up page or dis
   export default function Example() {
     return (
       <div>
-      <h1> Sign up </h1>
-        <SignUpButton>
+        <SignUpButton />
       </div>
     );
   }
@@ -44,8 +42,7 @@ The `<SignUpButton>` component is a button that links to the sign-up page or dis
   export default function Home() {
     return (
       <div>
-      <h1> Sign up </h1>
-        <SignUpButton>
+        <SignUpButton />
       </div>
     );
   }
@@ -57,17 +54,16 @@ The `<SignUpButton>` component is a button that links to the sign-up page or dis
   export default function Home() {
     return (
       <div>
-      <h1> Sign up </h1>
-        <SignUpButton>
+        <SignUpButton />
       </div>
     );
   }
   ```
 </CodeBlockTabs>
 
-#### Custom usage
+### Custom usage
 
-In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
+In some cases, you will want to use your own button, or button text. You can do that by wrapping your button in the `<SignUpButton>` component.
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
@@ -76,7 +72,6 @@ In some cases you will want to use your own button, or button text. You can do t
   export default function Home() {
     return (
       <div>
-      <h1> Sign up </h1>
         <SignUpButton mode="modal">
           <button>
             Sign up
@@ -93,7 +88,6 @@ In some cases you will want to use your own button, or button text. You can do t
   export default function Example() {
     return (
       <div>
-      <h1> Sign up </h1>
         <SignUpButton mode="modal">
           <button>
             Sign up
@@ -110,7 +104,6 @@ In some cases you will want to use your own button, or button text. You can do t
   export default function Home() {
     return (
       <div>
-      <h1> Sign up </h1>
         <SignUpButton mode="modal">
           <button>
             Sign up
@@ -127,7 +120,6 @@ In some cases you will want to use your own button, or button text. You can do t
   export default function Home() {
     return (
       <div>
-      <h1> Sign up </h1>
         <SignUpButton mode="modal">
           <button>
             Sign up
@@ -145,7 +137,7 @@ In some cases you will want to use your own button, or button text. You can do t
 | Name | Type | Description |
 | --- | --- | --- |
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton>`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton>`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'` |
 
