--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -185,7 +185,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
         <div>
             <h1>Index route</h1>
             <p>You are signed in!</p>
-            <UserButton afterSignOutUrl="/"/>
+            <UserButton />
         </div>
       );
     }
@@ -204,7 +204,7 @@ All props below are optional.
 | `signInUrl` | `string` | The full URL or path to navigate to when the "Add another account" button is clicked. |
 | `userProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Manage your account" button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
 | `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
-| `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). |
+| `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). Default is `/`. |
 | `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
 | `afterSwitchSessionUrl` | `string` | The full URL or path to navigate to after a successful account change (multi-session apps). |
 | `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
