--- a/docs/references/nodejs/available-methods.mdx
+++ b/docs/references/nodejs/available-methods.mdx
@@ -9,7 +9,7 @@ All resource operations are mounted as sub-APIs on the `clerkClient` object. You
 
 ## Instantiate a default `clerkClient` instance
 
-If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable and being finished, the *default instance* created by the SDK will suffice for your needs.
+If you would like to use the default instance of `clerkClient` provided by the SDK, you can provide the `CLERK_SECRET_KEY` as an environment variable and instantiate `clerkClient` without passing configuration options.
 
 <Tabs items={["ESM", "CJS"]}>
   <Tab>
