--- a/docs/references/nodejs/available-methods.mdx
+++ b/docs/references/nodejs/available-methods.mdx
@@ -19,7 +19,7 @@ If you would like to use the default instance of `clerkClient` provided by the S
   const userList = await clerkClient.users.getUserList();
   ```
 
-  Or if you are interested only in a certain resource:
+  If you are interested in a certain resource, you can destructure `clerkClient` to access just that resource.:
 
   ```js
   import { sessions } from '@clerk/clerk-sdk-node';
