--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -15,7 +15,7 @@ You need to create a Clerk application in your Clerk Dashboard before you can se
 
 ### Install `@clerk/clerk-sdk-node`
 
-Once a Clerk application has been created, you can install and then start using Clerk Node.js in your application. An ES module for the Clerk Node SDK is available under the [`@clerk/clerk-sdk-node`](https://www.npmjs.com/package/@clerk/clerk-sdk-node) npm package.
+Once a Clerk application has been created, you can install and then start using Clerk Node.js in your application. An ESM module for the Clerk Node SDK is available under the [`@clerk/clerk-sdk-node`](https://www.npmjs.com/package/@clerk/clerk-sdk-node) npm package.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
 ```sh filename="terminal"
