--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -5,17 +5,17 @@ description: Learn how to integrate Node.js into your Clerk application.
 
 # Clerk Node.js SDK
 
-## Setting up Clerk Node.js
+## Set up Clerk Node.js
 
 <Steps>
 
-### Create a Clerk application 
+### Create a Clerk application
 
 You need to create a Clerk application in your Clerk Dashboard before you can set up Clerk Node.js. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
-### Install Clerk Node.js
+### Install `@clerk/clerk-sdk-node`
 
-Once a Clerk application has been created, you can install and then start using Clerk Node.js in your application. An ES module for the Clerk Node SDK is available under the [`@clerk/clerk-sdk-node`](https://www.npmjs.com/package/@clerk/clerk-sdk-node) npm package.
+Once a Clerk application has been created, you can install and then start using Clerk Node.js in your application. An ESM module for the Clerk Node SDK is available under the [`@clerk/clerk-sdk-node`](https://www.npmjs.com/package/@clerk/clerk-sdk-node) npm package.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
 ```sh filename="terminal"
@@ -33,7 +33,7 @@ pnpm add @clerk/clerk-sdk-node
 
 ### Set environment keys
 
-Below is an example of a `.env.local` file. 
+Below is an example of a `.env.local` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
@@ -47,127 +47,9 @@ CLERK_SECRET_KEY={{secret}}
 
 </Steps>
 
-## Resources
+## Available methods
 
-All resource operations are mounted as sub-APIs on the `clerkClient` object. For more information, check out the [Clerk Backend SDK](/docs/references/backend/overview) documentation.
-
-## Customizing resources
-
-The following options are available for you to customize the behaviour of the `clerkClient` object.
-
-<Callout type="info">
-  Most options can also be set as environment variables so that you don't need to pass anything to the constructor or set it via the available setters.
-</Callout>
-
-| Option | Description | Default | Environment variable |
-| --- | --- | --- | --- |
-| `secretKey` | Server key for `api.clerk.com` | none | `CLERK_SECRET_KEY` |
-| `apiVersion` | for future use, `v1` for now | `v1` | `CLERK_API_VERSION` |
-| `serverApiURL` | for debugging / future use | `https://api.clerk.com` | `CLERK_API_URL` |
-| `httpOptions` | http client options | `{}` | N/A |
-
-For every option the resolution is as follows, in order of descending precedence:
-
-- option passed
-- environment variable (if applicable)
-- default
-
-Another available environment variable is `CLERK_LOGGING`. You can set its value to `true` to enable additional logging that may be of use when debugging an issue.
-
-### Singleton
-
-If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable and being finished, the default instance created by the SDK will suffice for your needs.
-
-<Tabs items={["ESM", "CJS"]}>
-  <Tab>
-  ```js
-  import clerkClient from '@clerk/clerk-sdk-node';
-
-  const userList = await clerkClient.users.getUserList();
-  ```
-
-  Or if you are interested only in a certain resource:
-
-  ```js
-  import { sessions } from '@clerk/clerk-sdk-node';
-
-  const sessionList = await sessions.getSessionList();
-  ```
-  </Tab>
-
-  <Tab>
-  ```js
-  const pkg = require('@clerk/clerk-sdk-node');
-  const clerkClient = pkg.default;
-
-  clerkClient.sessions
-    .getSessionList()
-    .then((sessions) => console.log(sessions))
-    .catch((error) => console.error(error));
-  ```
-
-  Or if you prefer a resource sub-api directly:
-
-  ```js
-  const pkg = require('@clerk/clerk-sdk-node');
-  const { clients } = pkg;
-
-  clients
-    .getClient(clientId)
-    .then((client) => console.log(client))
-    .catch((error) => console.error(error));
-  ```
-  </Tab>
-</Tabs>
-
-#### Setters
-
-The following setters are available for you to change the options even after you've obtained a handle on a `clerkClient` or sub-api instance:
-
-If you have a `clerkClient` handle:
-
-- `clerkClient.secretKey = value;`
-- `clerkClient.serverApiUrl = value;`
-- `clerkClient.apiVersion = value;`
-- `clerkClient.httpOptions = value;` (deprecated)
-
-If are using a sub-api handle and wish to change options on the (implicit) singleton `clerkClient` instance:
-
-- `setClerkSecretKey(value)`
-- `setClerkServerApiUrl(value)`
-- `setClerkApiVersion(value)`
-- `setClerkHttpOptions(value)`
-
-### Custom instantiation
-
-If you would like to customize the behavior of the SDK, you can instantiate a `clerkClient` instance yourself by passing in [options](#customizing-resources).
-
-The example below shows how to create a `clerkClient` instance and pass a Clerk secret key instead of setting a `CLERK_SECRET_KEY` environment variable.
-
-<InjectKeys>
-
-<CodeBlockTabs options={["ESM", "CJS"]}>
-```js
-import Clerk from '@clerk/clerk-sdk-node/esm/instance';
-
-const clerkClient = Clerk({ secretKey: '{{secret}}' });
-
-const clientList = await clerkClient.clients.getClientList();
-```
-
-```js
-const Clerk = require('@clerk/clerk-sdk-node/cjs/instance').default;
-
-const clerkClient = Clerk({ secretKey: '{{secret}}' });
-
-clerkClient.sessions
-    .getSessionList()
-    .then((sessions) => console.log(sessions))
-    .catch((error) => console.error(error));
-```
-</CodeBlockTabs>
-
-</InjectKeys>
+All resource operations are mounted as sub-APIs on the `clerkClient` object. To access the resource operations, [you must first instantiate a `clerkClient` instance](/docs/references/nodejs/available-methods).
 
 ## Multi-session applications
 
@@ -191,10 +73,10 @@ import Cookies from 'cookies';
 // query string parameter
 const sessionId = req.query._clerk_session_id;
 
-// Note: Clerk stores the clientToken in a cookie 
+// Note: Clerk stores the clientToken in a cookie
 // named "__session" for Firebase compatibility
 const cookies = new Cookies(req, res);
-const clientToken = cookies.get('__session');  
+const clientToken = cookies.get('__session');
 
 const session = await sessions.verifySession(sessionId, clientToken);
 ```
@@ -207,10 +89,10 @@ Using the last active session is appropriate when determining the user after a n
 import { clients, sessions } from '@clerk/clerk-sdk-node';
 import Cookies from 'cookies';
 
-// Note: Clerk stores the clientToken in a cookie 
+// Note: Clerk stores the clientToken in a cookie
 // named "__session" for Firebase compatibility
 const cookies = new Cookies(req, res);
-const clientToken = cookies.get('__session');  
+const clientToken = cookies.get('__session');
 
 const client = await clients.verifyClient(clientToken);
 const sessionId = client.lastActiveSessionId;
